--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Navigration Drawer</string>
+    <string name="navigration_drawer_open">Open navigation drawer</string>
+    <string name="navigration_drawer_close">Close navigation drawer</string>
 </resources>
